Frontend-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
  labels:
    app: examc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: examc
  template:
    metadata:
      labels:
        app: examc
    spec:
      containers:
      - name: front-cont
        image: swayamnakshane/fpart:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
